--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,7 @@
     "manifest_version": 2,
     "name": "Font Changer",
     "version": "0.1",
+    "description": "Allows user to select text on page and change its font-related properties",
     "content_scripts": [
         {
             "css": "style.css",
